--- a/hafta9.html
+++ b/hafta9.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Uygulaması</title>
+    <title>Hafta 9 - Test Uygulaması</title>
     <style>
         body {
             font-family: 'Roboto', Arial, sans-serif;
