--- a/hafta10.html
+++ b/hafta10.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Duyuru Penceresi</title>
+  <title>Hafta 10 - Duyuru Popup'ı</title>
   <style>
     /* Duyuru penceresinin başlangıç stilini ayarlıyoruz */
     .announcement {
