--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <a href="hafta7_1.html">Hafta 7.1</a>
     <a href="hafta7_2.html">Hafta 7.2</a>
     <a href="hafta8.html">Hafta 8</a>
+    <a href="circle.html">Circle</a>
     <a href="hafta9.html">Hafta 9</a>
     <a href="hafta10.html">Hafta 10</a>
     <a href="hafta12.php">Hafta 11-12</a>
