--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <a href="hafta10.html">Hafta 10</a>
     <a href="hafta12.php">Hafta 11-12</a>
     <a href="hafta13.php">Hafta 13</a>
+    <a href="bonus.html">Bonus</a>
   </div>
 </body>
 </html>
