--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <a href="hafta12.php">Hafta 11-12</a>
     <a href="hafta13.php">Hafta 13</a>
     <a href="bonus.html">Bonus</a>
+    <a href="anket.html">Anket</a>
   </div>
 </body>
 </html>
